tests/type_errors/sort_variants.nos
# expect_error: does not implement Ord
# Sorting variants without Ord impl should fail at compile time
type Color = Red | Green | Blue
main() = [Red, Green, Blue].sort()
